# monalisten

./: .gitattributes  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
scripts/: codegen.py  imports.py.template  namespaces.py.template
src/monalisten/: __init__.py  _core.py  _errors.py  _event_namespace.py  _namespace.py  _sse.py  events.py  types.py
tests/: conftest.py  ghk_utils.py  sse_server.py  test_auth.py  test_dispatch.py  test_hooking.py  test_hooks.py  test_meta_hooks.py  test_stream.py
