[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "monalisten"
version = "0.2.0"
description = "Monalisten is an async library for handling GitHub webhook events in an easy way"
readme = "README.md"
license = "MIT"
authors = [{ name = "trag1c", email = "dev@jakubr.me" }]
requires-python = ">=3.9"
dependencies = ["githubkit~=0.13.0", "httpx~=0.28.1", "httpx-sse~=0.4.1"]

[project.urls]
repository = "https://github.com/trag1c/monalisten"

[dependency-groups]
dev = [
  "aiohttp==3.12.15",
  "pyright==1.1.403",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.9",
  "taplo==0.9.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "S", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"src/monalisten/__init__.py" = ["E402"]
"src/monalisten/types.py" = ["TC004"]
"tests/*" = ["FBT", "T201", "SLF001"]
