[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "monalisten"
version = "0.3.1"
description = "Monalisten is an async library for handling GitHub webhook events in an easy way"
readme = "README.md"
license = "MIT"
authors = [{ name = "trag1c", email = "dev@jakubr.me" }]
requires-python = ">=3.9"
dependencies = ["githubkit~=0.13.0", "httpx~=0.28.1", "httpx-sse~=0.4.1"]

[project.urls]
repository = "https://github.com/trag1c/monalisten"

[dependency-groups]
dev = [
  "aiohttp==3.12.15",
  "anyio==4.11.0",
  "pyright==1.1.405",
  "pytest==8.4.1",
  "ruff==0.12.9",
  "taplo==0.9.3",
]

[tool.pytest.ini_options]
anyio_mode = "auto"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "FIX", "S", "ANN401", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"scripts/codegen.py" = ["T201", "INP001"]
"src/monalisten/__init__.py" = ["E402"]
"src/monalisten/events.py" = ["E501", "TC004"]
"tests/*" = ["FBT", "T201", "SLF001"]
